force-app/main/default/objects/ProductHistory__c/ProductHistory__c.object-meta.xml
<CustomObject>
    <description>Replica of Product2 object records</description>
    <label>Product History</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>