force-app/main/default/objects/ProductHistory__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Product record is active.</description>
    <inlineHelpText>Is Product record is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>