force-app/main/default/objects/ProductHistory__c/fields/ProductExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A 13 digit unique identifier of each product. This field should be used to relate the Product2 and respective ProductHistory__c record.</description>
    <externalId>true</externalId>
    <inlineHelpText>A 13 digit unique identifier of each product. This field should be used to relate the Product2 and respective ProductHistory__c record.</inlineHelpText>
    <label>Product External Id</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>