force-app/main/default/objects/ProductHistory__c/fields/SellingPrice__c.field-meta.xml
<CustomField>
    <fullName>SellingPrice__c</fullName>
    <description>A field reflecting the Product’s price.</description>
    <inlineHelpText>A field reflecting the Product’s price.</inlineHelpText>
    <label>Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>